Update show.sh